Add new touch-friendly drag handlers

Summary:
Added new drag Handlers for the rectangular region option, which become free-floating) if there is not enough space (results in a bigger touch area for moving the rectangle) and are more touch-friendly.

BUG: 371843
FIXED-IN: 19.12.0

Test Plan:
Before:
- drag handles very small, not touch-friendly
- If rectangle to small: drag handles too close together (or just removed in the newest version? The screenshot are from Plasma 5.16) and moving rectangle is not possible anymore (as touch areas for resizing fill out the rectangle)
{F7267810} {F7267812}
After:
{F7267756} {F7267758} {F7270926}

Reviewers: #spectacle, #vdg, ngraham, davidre

Reviewed By: #spectacle, #vdg, ngraham, davidre

Subscribers: davidre, filipf, ngraham, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D23322